--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jc-lab/hashsum",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +19,9 @@
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/jc-lab/hashsum.js/issues"
+  },
+  "bin": {
+    "hashsum": "./index.js"
   },
   "homepage": "https://github.com/jc-lab/hashsum.js#readme",
   "dependencies": {},
